svn: Fix gcc-13 One Definition Rule compilation error with LTO enabled

columns_t enum defined multiple times in different translation units. Although this
should not be an error, we move the definition to a separate unnamed namespace.

BUG: 482524